# Cpp_Projects

./: README.md
01.BasicSyntax/: CMakeLists.txt  ex10.cpp  ex2.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp  ex9.cpp  snake.cpp
01.CppBasicSyntax/: a.out  ex1.cpp  ex3.cpp
02.MemoryManagement/: CMakeLists.txt  ex1.cpp  ex2.cpp  ex3.cpp  ex4.cpp  ex5.cpp  ex6.cpp  ex7.cpp  ex8.cpp
