cmake_minimum_required(VERSION 3.6)
project(01_BasicSyntax)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES main.cpp ex1.cpp)
add_executable(01_BasicSyntax ${SOURCE_FILES})
add_executable(ex1 ex1.cpp)
add_executable(ex2 ex2.cpp)
add_executable(ex3 ex3.cpp)
add_executable(ex4 ex4.cpp)
add_executable(ex5 ex5.cpp)
add_executable(ex6 ex6.cpp)
add_executable(ex7 ex7.cpp)
add_executable(ex8 ex8.cpp)
add_executable(ex9 ex9.cpp)
add_executable(ex10 ex10.cpp)
